--- a/src/app/[slug]/components/Navbar/index.scss
+++ b/src/app/[slug]/components/Navbar/index.scss
@@ -1,5 +1,5 @@
-@import "../../styles/responsive.scss";
-@import "../../styles/colors.module.scss";
+@import "../../../../styles/responsive.scss";
+@import "../../../../styles/colors.module.scss";
 
 $transition: all 0.5s;
 
