feat: first deploy

--- a/src/app/[slug]/components/HomeBanner/index.scss
+++ b/src/app/[slug]/components/HomeBanner/index.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/colors.module.scss";
-@import "../../../styles/responsive.scss";
+@import "../../../../styles/colors.module.scss";
+@import "../../../../styles/responsive.scss";
 
 #home-banner {
     background-position: center;
