--- a/src/app/[slug]/gifts/components/GiftsList/components/Gift/components/GiftPaymentModal/index.scss
+++ b/src/app/[slug]/gifts/components/GiftsList/components/Gift/components/GiftPaymentModal/index.scss
@@ -1,14 +1,10 @@
-@import "../../../../../../../../styles/colors.module.scss";
+@import "../../../../../../../../../styles/colors.module.scss";
 
 #gift-payment-modal {
     text-align: center;
     padding: 24px;
 
     .description {
-    }
-
-    .price {
-        color: $color-primary;
     }
 
     .text {
