--- a/src/app/[slug]/gifts/page.scss
+++ b/src/app/[slug]/gifts/page.scss
@@ -1,6 +1,6 @@
-@import '../../styles/colors.module.scss';
+@import '../../../styles/colors.module.scss';
 
-#gifts-layout {
+#gifts-page {
     padding: 20px;
     background-color: $color-gray-100;
 }
