feat: presence confirmation

--- a/src/components/Input/index.scss
+++ b/src/components/Input/index.scss
@@ -12,6 +12,10 @@
         margin-bottom: 4px;
     }
 
+    .help-text {
+        color: $color-neutral-500;
+    }
+
     .input {
         border: 1px solid $color-gray-300;
         border-radius: 6px;
