--- a/src/app/[slug]/components/HomePhotoAlbum/index.scss
+++ b/src/app/[slug]/components/HomePhotoAlbum/index.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/colors.module.scss";
+@import "../../../../styles/colors.module.scss";
 
 #home-photo-album {
     padding: 12px;
