--- a/src/app/[slug]/components/EventBanner/index.scss
+++ b/src/app/[slug]/components/EventBanner/index.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/colors.module.scss";
 @import "../../../../styles/responsive.scss";
 
-#home-banner {
+#event-banner {
     background-position: center;
     background-size: cover;
 
