--- a/src/app/[slug]/components/Footer/index.scss
+++ b/src/app/[slug]/components/Footer/index.scss
@@ -1,6 +1,6 @@
 @import "../../../../styles/colors.module.scss";
 
-#app-footer {
+#event-footer {
     display: flex;
     justify-content: center;
     padding: 12px;
