--- a/src/app/[slug]/components/EventHeader/index.scss
+++ b/src/app/[slug]/components/EventHeader/index.scss
@@ -1,12 +1,11 @@
 @import "../../../../styles/colors.module.scss";
 
-#home-header {
+#event-header {
     width: 100%;
     height: 100vh;
 
     &::before {
         content: "";
-        // background-image: url(/images/cover.jpg);
         background-size: cover;
         background-position: center top;
         position: absolute;
@@ -26,6 +25,10 @@
         align-items: center;
         justify-content: center;
         gap: 6px;
+
+        &_logo {
+            width: 260px;
+        }
 
         h1 {
             font-weight: bold;
