--- a/src/app/[slug]/components/EventInfo/index.scss
+++ b/src/app/[slug]/components/EventInfo/index.scss
@@ -1,4 +1,4 @@
-#wedding-info {
+#event-info {
     background-image: url(/images/home-1.jpg);
     background-size: cover;
     background-position: center;
