--- a/src/app/[slug]/components/Navbar/index.scss
+++ b/src/app/[slug]/components/Navbar/index.scss
@@ -3,7 +3,7 @@
 
 $transition: all 0.5s;
 
-#app-navbar {
+#event-navbar {
     z-index: 999;
     position: fixed;
     display: flex;
@@ -21,6 +21,7 @@ $transition: all 0.5s;
         left: 12px;
         top: 8px;
         display: none;
+        text-decoration: none;
 
         @include is-mobile() {
             top: 18px;
@@ -99,17 +100,17 @@ $transition: all 0.5s;
         }
     }
 
-    &.transparent {
-        .items {
-            &__item {
-                &__link {
-                    color: $color-neutral-50;
-                }
-            }
-        }
-    }
+    // &.transparent {
+    //     .items {
+    //         &__item {
+    //             &__link {
+    //                 color: $color-neutral-50;
+    //             }
+    //         }
+    //     }
+    // }
 
-    &.solid {
+    &.solid, &.transparent {
         background: $color-neutral-50;
 
         -webkit-box-shadow: 0px 0px 24px -4px rgba(0, 0, 0, 0.4);
