feat: home page

--- a/src/app/[slug]/components/EventInfo/index.scss
+++ b/src/app/[slug]/components/EventInfo/index.scss
@@ -1,5 +1,5 @@
 #event-info {
-    background-image: url(/images/home-1.jpg);
+    background-image: url(/images/event/home-1.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
