--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -2,6 +2,7 @@ $color-black: #000000;
 $color-white: #ffffff;
 $color-primary: #1e3a8a;
 $color-secondary: #172554;
+$color-highlight: #f16920;
 
 // Slate
 $color-slate-50: #f8fafc;
@@ -294,6 +295,7 @@ $color-rose-950: #4c0519;
     color-white: $color-white;
     color-primary: $color-primary;
     color-secondary: $color-secondary;
+    color-highlight: $color-highlight;
 
     color-slate-50: $color-slate-50;
     color-slate-100: $color-slate-100;
