--- a/src/app/[slug]/components/Navbar/index.scss
+++ b/src/app/[slug]/components/Navbar/index.scss
@@ -10,6 +10,7 @@ $transition: all 0.5s;
     width: 100%;
     justify-content: center;
     transition: $transition;
+    height: 50px;
 
     @include is-mobile() {
         flex-direction: column;
