--- a/src/app/components/Events/EventsList/index.scss
+++ b/src/app/components/Events/EventsList/index.scss
@@ -27,6 +27,7 @@ $control-width: 42px;
                 flex-direction: column;
                 align-items: flex-end;
                 justify-content: flex-end;
+                transition: all 0.5s ease;
 
                 &::before {
                     content: "";
@@ -51,6 +52,16 @@ $control-width: 42px;
                     background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0) 100%);
                 }
 
+                &:hover {
+                    filter: brightness(1.3);
+                    -webkit-filter: brightness(1.3);
+                    
+                    .content {
+                        color: $color-white;
+                    }
+                    
+                }
+
                 .content {
                     z-index: 1;
                     display: flex;
@@ -58,15 +69,12 @@ $control-width: 42px;
                     align-items: flex-start;
                     width: 100%;
                     padding: 12px;
+                    color: $color-neutral-100;
+                    transition: all 0.5s ease;
 
                     .event-title {
                         font-size: 1.6rem;
                         font-weight: bold;
-                        color: $color-white;
-                    }
-
-                    .event-date {
-                        color: $color-white;
                     }
                 }
             }
