--- a/src/components/InitialsIcon/index.scss
+++ b/src/components/InitialsIcon/index.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 20px;
+    padding: 2px;
     
     .initial {
         color: $color-white;
