--- a/src/app/[slug]/components/Navbar/index.scss
+++ b/src/app/[slug]/components/Navbar/index.scss
@@ -15,6 +15,7 @@ $transition: all 0.5s;
     @include is-mobile() {
         flex-direction: column;
         align-items: flex-end;
+        height: 68px;
     }
 
     .logo {
@@ -111,7 +112,8 @@ $transition: all 0.5s;
     //     }
     // }
 
-    &.solid, &.transparent {
+    &.solid,
+    &.transparent {
         background: $color-neutral-50;
 
         -webkit-box-shadow: 0px 0px 24px -4px rgba(0, 0, 0, 0.4);
