--- a/src/app/components/About/index.scss
+++ b/src/app/components/About/index.scss
@@ -7,7 +7,7 @@
         gap: 40px;
         text-align: center;
         font-size: 1.2rem;
-        padding: 44px 16%;
+        padding: 0 10%;
 
         p {
             margin: 0;
